--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "SSO 2FA Auto Login",
-  "version": "1.0",
+  "version": "1.1.0",
   "description": "Automate SSO login with 2FA",
   "permissions": [
     "storage",
@@ -31,7 +31,8 @@
         "https://sso.doshisha.ac.jp/*",
         "https://idp.doshisha.ac.jp/*"
       ],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "css": ["hide-alerts.css"]
     }
   ],
   "options_page": "options.html"
